# projekt-w-jezyku-c-Lokej23

./: .gitignore  CMakeLists.txt  README.md  mingw-toolchain.cmake
include/: ball.h  file.h  game.h  gui.h  main.h  menu.h  paddle.h
src/: ball.c  file.c  game.c  gui.c  main.c  menu.c  paddle.c
